feat(middleware): 异常捕获处理，自定义recovery，并发送邮件告警

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -42,3 +42,12 @@ JWT:
   Issuer: blog-service
   # 超时时间
   Expire: 7200
+Email:
+  Host: smtp.qq.com
+  Port: 465
+  UserName: xxxx@qq.com
+  Password: xxxxxxxx
+  IsSSL: true
+  From: xxxx@qq.com
+  To:
+    - xxxx@qq.com
